<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.co.atomicsoft.android.fixer.MainActivity"
    android:background="#cccccc">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_error_button"
                android:id="@+id/findErrorButton"
                android:background="@mipmap/error_code_find_button"
                android:layout_margin="4dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_manual_button"
                android:id="@+id/selectManualButton"
                android:background="@mipmap/factory_setup_manual_button"
                android:layout_margin="4dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_sys_var_button"
                android:id="@+id/findSysVarButton"
                android:background="@mipmap/sys_var_find_button"
                android:layout_margin="4dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_report_button"
                android:id="@+id/sendReportButton"
                android:background="@mipmap/bug_report_send_button"
                android:layout_margin="4dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_button"
                android:id="@+id/exitButton"
                android:background="@mipmap/fixer_exit_button"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
